--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     container_name: back
     build: 
       context: ./back/
-      dockerfile: docker/cpu.Dockerfile
+      dockerfile: docker/gpu.Dockerfile
     ports:
       - "5050:5050"
     volumes:
